--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ function sendMessage() {
   messages.scrollTop = messages.scrollHeight;
 
   // Replace with your actual Render backend URL
-  fetch("https://ukurcerdik-backend.onrender.com", {
+  fetch("https://ukurcerdik-backend.onrender.com/chat", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
