--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function sendMessage() {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
-      message: userMsg,
+      userMessage: userMsg,
       topic: topic
     })
   })
